--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-main: unprotesting.com.github.TradeFlow
+main: com.github.lye.TradeFlow
 folia-supported: true
 name: TradeFlow
 description: "TradeFlow is a dynamic economy plugin that regulates prices based on supply and demand."
 author: "Lye"
-version: "0.14.4"
+version: "0.1"
 depend:
   - "Vault"
 libraries:
@@ -11,7 +11,7 @@ libraries:
   - "org.eclipse.jetty:jetty-servlet:11.0.19"
 api-version: 1.13
 api: "1.13"
-website: "https://github.com/Unprotesting/TradeFlow"
+website: "https://github.com/Lyecocoworld/TradeFlow"
 prefix: "TradeFlow"
 commands:
   tfmarket:
